@@ -20,7 +20,6 @@ package com.winterhavenmc.lodestar.commands;
 import com.winterhavenmc.lodestar.PluginMain;
 import com.winterhavenmc.lodestar.messages.MessageId;
 import com.winterhavenmc.lodestar.sounds.SoundId;
-
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabExecutor;
@@ -33,8 +32,8 @@ import java.util.stream.Collectors;
 /**
  * Implements command executor for LodeStar commands.
  */
-public final class CommandManager implements TabExecutor {
-
+public final class CommandManager implements TabExecutor
+{
 	// reference to main class
 	private final PluginMain plugin;
 
@@ -47,8 +46,8 @@ public final class CommandManager implements TabExecutor {
 	 *
 	 * @param plugin reference to main class
 	 */
-	public CommandManager(final PluginMain plugin) {
-
+	public CommandManager(final PluginMain plugin)
+	{
 		// set reference to main class
 		this.plugin = plugin;
 
@@ -56,7 +55,8 @@ public final class CommandManager implements TabExecutor {
 		Objects.requireNonNull(plugin.getCommand("lodestar")).setExecutor(this);
 
 		// register subcommands
-		for (SubcommandType subcommandType : SubcommandType.values()) {
+		for (SubcommandType subcommandType : SubcommandType.values())
+		{
 			subcommandRegistry.register(subcommandType.create(plugin));
 		}
 
@@ -70,16 +70,17 @@ public final class CommandManager implements TabExecutor {
 	 */
 	@Override
 	public List<String> onTabComplete(@Nonnull final CommandSender sender, @Nonnull final Command command,
-	                                  @Nonnull final String alias, final String[] args) {
-
+	                                  @Nonnull final String alias, final String[] args)
+	{
 		// if more than one argument, use tab completer of subcommand
-		if (args.length > 1) {
-
+		if (args.length > 1)
+		{
 			// get subcommand from map
 			Optional<Subcommand> optionalSubcommand = subcommandRegistry.getSubcommand(args[0]);
 
 			// if no subcommand returned from map, return empty list
-			if (optionalSubcommand.isEmpty()) {
+			if (optionalSubcommand.isEmpty())
+			{
 				return Collections.emptyList();
 			}
 
@@ -100,20 +101,22 @@ public final class CommandManager implements TabExecutor {
 	 */
 	@Override
 	public boolean onCommand(@Nonnull final CommandSender sender, @Nonnull final Command cmd,
-							 @Nonnull final String label, final String[] args) {
-
+	                         @Nonnull final String label, final String[] args)
+	{
 		// convert args array to list
 		List<String> argsList = new ArrayList<>(Arrays.asList(args));
 
 		String subcommandName;
 
 		// get subcommand, remove from front of list
-		if (argsList.size() > 0) {
-			subcommandName = argsList.remove(0);
+		if (!argsList.isEmpty())
+		{
+			subcommandName = argsList.removeFirst();
 		}
 
 		// if no arguments, set command to help
-		else {
+		else
+		{
 			subcommandName = "help";
 		}
 
@@ -121,14 +124,15 @@ public final class CommandManager implements TabExecutor {
 		Optional<Subcommand> optionalSubcommand = subcommandRegistry.getSubcommand(subcommandName);
 
 		// if subcommand is empty, get help command from map
-		if (optionalSubcommand.isEmpty()) {
+		if (optionalSubcommand.isEmpty())
+		{
 			optionalSubcommand = subcommandRegistry.getSubcommand("help");
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_INVALID_COMMAND).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_INVALID);
 		}
 
 		// execute subcommand
-		optionalSubcommand.ifPresent( subcommand -> subcommand.onCommand(sender, argsList) );
+		optionalSubcommand.ifPresent(subcommand -> subcommand.onCommand(sender, argsList));
 
 		return true;
 	}
@@ -137,12 +141,12 @@ public final class CommandManager implements TabExecutor {
 	/**
 	 * Get matching list of subcommands for which sender has permission
 	 *
-	 * @param sender the command sender
+	 * @param sender      the command sender
 	 * @param matchString the string prefix to match against command names
 	 * @return List of String - command names that match prefix and sender has permission
 	 */
-	private List<String> getMatchingSubcommandNames(final CommandSender sender, final String matchString) {
-
+	private List<String> getMatchingSubcommandNames(final CommandSender sender, final String matchString)
+	{
 		return subcommandRegistry.getKeys().stream()
 				.map(subcommandRegistry::getSubcommand)
 				.filter(Optional::isPresent)
